--- a/index.html
+++ b/index.html
@@ -23,5 +23,10 @@
             <li><a href="games.html">Kontakt</a></li>
         </ul>
     </nav>
+
+    <!-- Splash-->
+    <section id="splash"></section>
     <script src=""></script>
-</body></html>
+</body>
+
+</html>
