--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
 
     <!-- Splash-->
     <section id="splash"></section>
+
+ <!--   Footer-->
+   <footer id="footer">
+            <a href="index.html">Log ud</a>
+        </footer>
     <script src=""></script>
 </body>
 
