--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 <body>
     <!-- [NAVIGATION BAR] -->
     <nav id="page-nav">
+       <div id="logo">
+                <div id="container_logo">
+                    <div id="sprite_logo"></div>
+                </div>
+            </div>
         <!-- [THE HAMBURGER] -->
         <label for="hamburger">&#9776;</label>
         <input type="checkbox" id="hamburger" />
@@ -18,19 +23,59 @@
         <!-- [MENU ITEMS] -->
         <ul>
             <li><a href="index.html">Forside</a></li>
-            <li><a href="about.html">Om</a></li>
-            <li><a href="tech.html">Portfolio</a></li>
-            <li><a href="games.html">Kontakt</a></li>
+            <li><a href="om.html">About</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
     </nav>
 
     <!-- Splash-->
     <section id="splash"></section>
 
+   <!-- Logo-->
+     <div id="logo">
+                <div id="container_logo">
+                    <div id="sprite_logo"></div>
+                </div>
+            </div>
+
  <!--   Footer-->
-   <footer id="footer">
-            <a href="index.html">Log ud</a>
-        </footer>
+     <footer class="footer">
+        <section id="info">
+            <div class="sectionwrapper">
+                <div class="col">
+                    <div class="top">
+                        <h4>Bondegårdens åbningstider:</h4>
+                        <p>Hverdage kl. 09:30 til 17:00<br>Weekend kl. 09:30 til 16:00<br>
+                            Helligedage: lukket (med mindre disse er på en søndag)<br>- Oprydning og nedlukning påbegyndes 40-45 min. inden lukketid</p>
+                        <h4>Bondegårdens adresse</h4>
+                        <p>Peder Lykkes vej 71-73<br>2300 København S</p>
+                        <p>+ 45 32 58 39 63<br> Bondehuset@mail.dk</p>
+                    </div>
+                </div>
+                <!-- <div class="col">
+                    <div class="top">
+                    </div>
+                </div>-->
+                <div class="col">
+                    <div class="top">
+                        <img src="Billeder/without_background_white.png" alt="Logo">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="top">
+                        <h4>Byggerens åbningstider:</h4>
+                        <p>Mandag til torsdag kl. 09:30 til 17:00<br>Fredag kl. 10:00 til 17:00<br>
+                            Weekend/Helligedage: lukket<br>- Oprydning påbegyndes 30 min. inden lukketid.
+                        </p>
+                        <h4>Byggerens adresse</h4>
+                        <p>Peder Lykkes vej 71-73<br>2300 København S</p>
+                        <p>+ 32 58 67 70<br> byggeren@c.dk</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </footer>
     <script src=""></script>
 </body>
 
