--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <!-- [NAVIGATION BAR] -->
     <nav id="page-nav">
-       <div id="logo">
-                <div id="container_logo">
-                    <div id="sprite_logo"></div>
-                </div>
+        <div id="logo">
+            <div id="container_logo">
+                <div id="sprite_logo"></div>
             </div>
+        </div>
         <!-- [THE HAMBURGER] -->
         <label for="hamburger">&#9776;</label>
         <input type="checkbox" id="hamburger" />
@@ -32,45 +32,31 @@
     <!-- Splash-->
     <section id="splash"></section>
 
-   <!-- Logo-->
-     <div id="logo">
-                <div id="container_logo">
-                    <div id="sprite_logo"></div>
-                </div>
-            </div>
+    <!-- Logo-->
+    <div id="logo">
+        <div id="container_logo">
+            <div id="sprite_logo"></div>
+        </div>
+    </div>
 
- <!--   Footer-->
-     <footer class="footer">
+    <!--   Footer-->
+    <footer class="footer">
+        <div id="col_logo">
+            <div class="top_logo">
+            </div>
+        </div>
         <section id="info">
             <div class="sectionwrapper">
                 <div class="col">
                     <div class="top">
-                        <h4>Bondegårdens åbningstider:</h4>
-                        <p>Hverdage kl. 09:30 til 17:00<br>Weekend kl. 09:30 til 16:00<br>
-                            Helligedage: lukket (med mindre disse er på en søndag)<br>- Oprydning og nedlukning påbegyndes 40-45 min. inden lukketid</p>
-                        <h4>Bondegårdens adresse</h4>
-                        <p>Peder Lykkes vej 71-73<br>2300 København S</p>
-                        <p>+ 45 32 58 39 63<br> Bondehuset@mail.dk</p>
-                    </div>
-                </div>
-                <!-- <div class="col">
-                    <div class="top">
-                    </div>
-                </div>-->
-                <div class="col">
-                    <div class="top">
-                        <img src="Billeder/without_background_white.png" alt="Logo">
+                        <h4>Home</h4>
+                        <h4>About</h4>
                     </div>
                 </div>
                 <div class="col">
                     <div class="top">
-                        <h4>Byggerens åbningstider:</h4>
-                        <p>Mandag til torsdag kl. 09:30 til 17:00<br>Fredag kl. 10:00 til 17:00<br>
-                            Weekend/Helligedage: lukket<br>- Oprydning påbegyndes 30 min. inden lukketid.
-                        </p>
-                        <h4>Byggerens adresse</h4>
-                        <p>Peder Lykkes vej 71-73<br>2300 København S</p>
-                        <p>+ 32 58 67 70<br> byggeren@c.dk</p>
+                        <h4>Portfolio</h4>
+                        <h4>Contact</h4>
                     </div>
                 </div>
             </div>
