--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
         <!-- [MENU ITEMS] -->
         <ul>
-            <li><a href="index.html">Forside</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="om.html">About</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="kontakt.html">Kontakt</a></li>
+            <li><a href="kontakt.html">Contact</a></li>
         </ul>
     </nav>
 
