--- a/portfolio.html
+++ b/portfolio.html
@@ -16,19 +16,45 @@
 
         <!-- [MENU ITEMS] -->
         <ul>
-            <li><a href="index.html">Forside</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="om.html">About</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="kontakt.html">Kontakt</a></li>
+            <li><a href="kontakt.html">Contact</a></li>
         </ul>
     </nav>
 
     <!-- Splash-->
-    <section id="splash_1"></section>
+    <section id="splash"></section>
+
+    <!-- Logo-->
+    <div id="logo">
+        <div id="container_logo">
+            <div id="sprite_logo"></div>
+        </div>
+    </div>
 
     <!--   Footer-->
-    <footer id="footer">
-        <a href="index.html">Log ud</a>
+    <footer class="footer">
+        <div id="col_logo">
+            <div class="top_logo">
+            </div>
+        </div>
+        <section id="info">
+            <div class="sectionwrapper">
+                <div class="col">
+                    <div class="top">
+                        <h4>Home</h4>
+                        <h4>About</h4>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="top">
+                        <h4>Portfolio</h4>
+                        <h4>Contact</h4>
+                    </div>
+                </div>
+            </div>
+        </section>
     </footer>
     <script src=""></script>
 </body></html>
