--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 
 <body>
     <!-- [NAVIGATION BAR] -->
-    <nav id="page-nav">
-        <div id="logo">
+    <div id="nav_wrapper">
+    <div id="logo">
             <div id="container_logo">
                 <div id="sprite_logo"></div>
             </div>
         </div>
+    <nav id="page-nav">
         <!-- [THE HAMBURGER] -->
         <label for="hamburger">&#9776;</label>
         <input type="checkbox" id="hamburger" />
@@ -31,6 +32,7 @@
             <li><a href="kontakt.html">Contact</a></li>
         </ul>
     </nav>
+    </div>
 
     <!-- Splash-->
     <section id="splash"></section>
