--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
                     <i class="fa fa-envelope"></i>
                 </div>
             </div>
+            <div class="copyright">
+                <p>&#169; Copyright 2019 - All Rights Reserved &#10072; Designed by Nitiya Lihn</p>
+            </div>
     </footer>
     <script src=""></script>
 </body>
