--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <!--Icons-->
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-
+    <!-- Favicon-->
 </head>
 
 <body>
@@ -27,7 +27,7 @@
         <!-- [MENU ITEMS] -->
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="om.html">About</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="kontakt.html">Contact</a></li>
         </ul>
@@ -35,7 +35,9 @@
     </div>
 
     <!-- Splash-->
-    <section id="splash"></section>
+        <section id="splash"></section>
+
+
 
     <!--   Footer-->
     <footer class="footer">
