--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
         <!-- [MENU ITEMS] -->
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="om.html">About</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="kontakt.html">Contact</a></li>
         </ul>
