--- a/about.html
+++ b/about.html
@@ -32,14 +32,14 @@
     </div>
 
     <!-- Splash-->
-    <div class="container">
-        <div class="relative">
-            <p class="about">Indsæt billede</p>
-            <div class="child">
-                <p class="about">About Nit</p>
-            </div>
+    <section id="about_splash"></section>
+    <!-- Content-->
+    <div id="about_wrapper">
+        <div class="about_content">
+            <img src="Billeder/Sk%C3%A6rmbillede%202019-06-11%20kl.%2012.26.09.png" alt="Portræt">
         </div>
     </div>
+
 
     <!--   Footer-->
     <footer class="footer">
