--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <!-- About font-->
+    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -36,7 +38,14 @@
     <!-- Content-->
     <div id="about_wrapper">
         <div class="about_content">
-            <img src="Billeder/Sk%C3%A6rmbillede%202019-06-11%20kl.%2012.26.09.png" alt="Portræt">
+            <figure> <img src="Billeder/Sk%C3%A6rmbillede%202019-06-11%20kl.%2012.40.23.png" alt="Portræt">
+                <figcaption>Nitiya Lihn</figcaption>
+            </figure>
+            <p>
+                Hi, my name is Nitiya. I am 23 years old and based in Copenhagen Denmark. I live with my boyfriend and our pet dog Fluffy in our studio apartment. I am currently studying multimedia design at KEA (Københavns Erhvervsakademi).
+                <br>
+                My interest in multimedia design stared when I met my boyfriend Philip who is a software engineer. I’ve been creative throughout my life, and therefore want to find a job where I can make a living by being creative.
+            </p>
         </div>
     </div>
 
@@ -79,4 +88,6 @@
         </div>
     </footer>
     <script src=""></script>
-</body></html>
+</body>
+
+</html>
