--- a/kontakt.html
+++ b/kontakt.html
@@ -1,35 +1,55 @@
 <!DOCTYPE html>
 <html lang="da">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <!--Icons-->
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 
 <body>
     <!-- [NAVIGATION BAR] -->
-    <nav id="page-nav">
-        <!-- [THE HAMBURGER] -->
-        <label for="hamburger">&#9776;</label>
-        <input type="checkbox" id="hamburger" />
+    <div id="nav_wrapper">
+        <div id="logo">
+            <div id="container_logo">
+                <div id="sprite_logo"></div>
+            </div>
+        </div>
+        <nav id="page-nav">
+            <!-- [THE HAMBURGER] -->
+            <label for="hamburger">&#9776;</label>
+            <input type="checkbox" id="hamburger" />
 
-        <!-- [MENU ITEMS] -->
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="kontakt.html">Contact</a></li>
-        </ul>
-    </nav>
+            <!-- [MENU ITEMS] -->
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="kontakt.html">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div id="contact">
+        <div class="container">
+            <form action="action_page.php">
 
-    <!-- Splash-->
-    <section id="splash"></section>
+                <label for="fname">First Name</label>
+                <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
-    <!-- Logo-->
-    <div id="logo">
-        <div id="container_logo">
-            <div id="sprite_logo"></div>
+                <label for="lname">Last Name</label>
+                <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+                <label for="subject">Subject</label>
+                <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+                <input type="submit" value="Submit">
+            </form>
+        </div>
+        <div class="container_2">
+            hej med dig
         </div>
     </div>
 
@@ -55,6 +75,20 @@
                 </div>
             </div>
         </section>
+        <div class="media_wrapper">
+            <div class="item">
+                <i class="fa fa-facebook"></i>
+            </div>
+            <div class="item">
+                <i class="fa fa-instagram"></i>
+            </div>
+            <div class="item">
+                <i class="fa fa-envelope"></i>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>&#169; Copyright 2019 - All Rights Reserved &#10072; Designed by Nitiya Lihn</p>
+        </div>
     </footer>
     <script src=""></script>
 </body></html>
