--- a/kontakt.html
+++ b/kontakt.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <!--Icons-->
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+   <!-- Font-->
+   <link href="https://fonts.googleapis.com/css?family=Poppins|Rokkitt&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -32,26 +34,44 @@
             </ul>
         </nav>
     </div>
-    <div id="contact">
-        <div class="container">
-            <form action="action_page.php">
 
-                <label for="fname">First Name</label>
-                <input type="text" id="fname" name="firstname" placeholder="Your name..">
+    <section id="contact">
+        <div class="sectionwrapper">
+            <div class="col">
+                <h3>My Google Maps Demo</h3>
+                <!--The div element for the map -->
+                <div id="map"></div>
+            </div>
+            <div class="col">
+                <div class="top">
+                    <h1>
+                        GET IN TOUCH
+                    </h1>
+                    <p>
+                        Please do contact me if you have any questions or if there's anything I can help you with. I would love to hear from you.
+                    </p>
+                    <p>
+                        Tel: +45 20412823 &#10072; Email: nitiyalihn@gmail.com
+                    </p>
+                </div>
+                <div class="bottom">
+                    <div class="container">
+                        <form action="action_page.php">
 
-                <label for="lname">Last Name</label>
-                <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+                            <input type="text" id="name" name="firstname" placeholder="Name">
 
-                <label for="subject">Subject</label>
-                <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+                            <input type="text" id="email" name="email" placeholder="Email">
 
-                <input type="submit" value="Submit">
-            </form>
+                            <textarea id="subject" name="subject" placeholder="Message" style="height:200px"></textarea>
+
+                            <input type="submit" value="Submit">
+
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="container_2">
-            hej med dig
-        </div>
-    </div>
+    </section>
 
     <!--   Footer-->
     <footer class="footer">
@@ -90,5 +110,7 @@
             <p>&#169; Copyright 2019 - All Rights Reserved &#10072; Designed by Nitiya Lihn</p>
         </div>
     </footer>
-    <script src=""></script>
-</body></html>
+    <script src="script.js"></script>
+</body>
+
+</html>
