--- a/portfolio.html
+++ b/portfolio.html
@@ -9,28 +9,32 @@
 
 <body>
     <!-- [NAVIGATION BAR] -->
-    <nav id="page-nav">
-        <!-- [THE HAMBURGER] -->
-        <label for="hamburger">&#9776;</label>
-        <input type="checkbox" id="hamburger" />
-
-        <!-- [MENU ITEMS] -->
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="kontakt.html">Contact</a></li>
-        </ul>
-    </nav>
-
-    <!-- Splash-->
-    <section id="splash"></section>
-
-    <!-- Logo-->
-    <div id="logo">
-        <div id="container_logo">
-            <div id="sprite_logo"></div>
+    <div id="nav_wrapper">
+        <div id="logo">
+            <div id="container_logo">
+                <div id="sprite_logo"></div>
+            </div>
         </div>
+        <nav id="page-nav">
+            <!-- [THE HAMBURGER] -->
+            <label for="hamburger">&#9776;</label>
+            <input type="checkbox" id="hamburger" />
+
+            <!-- [MENU ITEMS] -->
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="kontakt.html">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+
+    <div class="portfolio">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>3</div>
     </div>
 
     <!--   Footer-->
@@ -56,5 +60,5 @@
             </div>
         </section>
     </footer>
-    <script src=""></script>
+    <script src="script.js"></script>
 </body></html>
