--- a/kontakt.html
+++ b/kontakt.html
@@ -38,7 +38,7 @@
     <section id="contact">
         <div class="sectionwrapper">
             <div class="col">
-                <h3>My Google Maps Demo</h3>
+                <h3>Google Maps</h3>
                 <!--The div element for the map -->
                 <div id="map"></div>
             </div>
