--- a/portfolio.html
+++ b/portfolio.html
@@ -59,6 +59,20 @@
                 </div>
             </div>
         </section>
+        <div class="media_wrapper">
+            <div class="item">
+                <i class="fa fa-facebook"></i>
+            </div>
+            <div class="item">
+                <i class="fa fa-instagram"></i>
+            </div>
+            <div class="item">
+                <i class="fa fa-envelope"></i>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>&#169; Copyright 2019 - All Rights Reserved &#10072; Designed by Nitiya Lihn</p>
+        </div>
     </footer>
     <script src="script.js"></script>
 </body></html>
